@@ -25,6 +25,8 @@
 - Using HTML <detail> tags in message/warning/error output to clean up the HTML report. Not supported in all browsers or email clients, so end user experience may vary.
 - Ability to roll back database to a specific time/date (-b option). Useful for failed runs or testing.
 - Changed bahavior of -i option (again!). After initialization, if program can continue, it will. Also eliminated undocumented -I option.
+- Ability to remove a source/destination pair from the database if it is no longer in use (-m option)
+- Purge emails that are no longer on the server from the database. (-p option or [main] purgedb in .rc file)
 
 
 2.0.4
